# ModuleCreator

./: .gitignore  CMakeLists.txt  README.md  class_src_template.txt  do.sh  github_automation.txt  main.cxx  main_cmake_template.txt  main_template.txt  replacer.sh  test_cmake_template.txt  test_template.txt
cmake/: configure_qt5.cmake
include/: CopyFiles.hxx
include/ModuleEditor/: Editor.hxx  module_editor.ui
materials/: class_hdr_template.txt  main_cmake_template.txt  test_cmake_template.txt  test_template.txt
src/: Editor.cxx  Editor.cxx.save
tests/: CMakeLists.txt
