cmake_minimum_required(VERSION 3.1)
macro(ADD_NEW_TEST TEST_SOURCE TEST_DEPENDENCIES FOLDER_NAME)
	IF(${BUILD_TESTS})
		set (TARGET_NAME ${TEST_SOURCE}_TESTTARGET)
		add_executable(${TARGET_NAME} ${TEST_SOURCE}.cxx)
		target_link_libraries(${TARGET_NAME} ${${TEST_DEPENDENCIES}})
		add_test(NAME ${TEST_SOURCE} COMMAND ${TARGET_NAME})
		set_property(TARGET ${TARGET_NAME} PROPERTY FOLDER ${FOLDER_NAME})
	ENDIF()
endmacro()

set(MODULEEDITOR_TEST_DEPENDENCIES ${Boost_LIBRARIES})

set(MATERIALS_FOLDER ${CMAKE_CURRENT_BINARY_DIR}/ModuleEditor_tests_materials/)

# file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/materials/ DESTINATION ${MATERIALS_FOLDER})

add_definitions(-DMATERIALS_FOLDER="${MATERIALS_FOLDER}")

# ADD_NEW_TEST(ModuleEditor_add_test        MODULEEDITOR_TEST_DEPENDENCIES "ModuleEditor_tests")
